@@ -1,3 +1,8 @@
+2009-06-05  Ulrich Drepper  <drepper@redhat.com>
+
+	* csu/elf-init.c: Only compile in IFUNC functionality if USE_MULTIARCH
+	is defined.
+
 2009-06-04  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/x86_64/strlen.S: Minor optimizations.
